--- a/Sequential model.ipynb
+++ b/Sequential model.ipynb
@@ -168,6 +168,237 @@
     "# Train the model, iterating on the data in batches of 32 samples\n",
     "model.fit(data, labels, epochs=10, batch_size=32)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "1000/1000 [==============================] - 0s 421us/step - loss: 2.3552 - acc: 0.0870\n",
+      "Epoch 2/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 2.3123 - acc: 0.1080\n",
+      "Epoch 3/50\n",
+      "1000/1000 [==============================] - 0s 32us/step - loss: 2.3011 - acc: 0.1000\n",
+      "Epoch 4/50\n",
+      "1000/1000 [==============================] - 0s 36us/step - loss: 2.2903 - acc: 0.1190\n",
+      "Epoch 5/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 2.2834 - acc: 0.1350\n",
+      "Epoch 6/50\n",
+      "1000/1000 [==============================] - 0s 35us/step - loss: 2.2748 - acc: 0.1350\n",
+      "Epoch 7/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 2.2640 - acc: 0.1410\n",
+      "Epoch 8/50\n",
+      "1000/1000 [==============================] - 0s 33us/step - loss: 2.2582 - acc: 0.1550\n",
+      "Epoch 9/50\n",
+      "1000/1000 [==============================] - 0s 39us/step - loss: 2.2480 - acc: 0.1610\n",
+      "Epoch 10/50\n",
+      "1000/1000 [==============================] - 0s 35us/step - loss: 2.2390 - acc: 0.1680\n",
+      "Epoch 11/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 2.2286 - acc: 0.1820\n",
+      "Epoch 12/50\n",
+      "1000/1000 [==============================] - 0s 35us/step - loss: 2.2189 - acc: 0.2020\n",
+      "Epoch 13/50\n",
+      "1000/1000 [==============================] - 0s 36us/step - loss: 2.2084 - acc: 0.2070\n",
+      "Epoch 14/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 2.1996 - acc: 0.1970\n",
+      "Epoch 15/50\n",
+      "1000/1000 [==============================] - 0s 36us/step - loss: 2.1908 - acc: 0.2080\n",
+      "Epoch 16/50\n",
+      "1000/1000 [==============================] - 0s 35us/step - loss: 2.1803 - acc: 0.2300\n",
+      "Epoch 17/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 2.1691 - acc: 0.2280\n",
+      "Epoch 18/50\n",
+      "1000/1000 [==============================] - 0s 36us/step - loss: 2.1602 - acc: 0.2310\n",
+      "Epoch 19/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 2.1491 - acc: 0.2370\n",
+      "Epoch 20/50\n",
+      "1000/1000 [==============================] - 0s 33us/step - loss: 2.1376 - acc: 0.2470\n",
+      "Epoch 21/50\n",
+      "1000/1000 [==============================] - 0s 36us/step - loss: 2.1251 - acc: 0.2390\n",
+      "Epoch 22/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 2.1128 - acc: 0.2690\n",
+      "Epoch 23/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 2.1054 - acc: 0.2590\n",
+      "Epoch 24/50\n",
+      "1000/1000 [==============================] - 0s 38us/step - loss: 2.0945 - acc: 0.2770\n",
+      "Epoch 25/50\n",
+      "1000/1000 [==============================] - 0s 39us/step - loss: 2.0820 - acc: 0.2720\n",
+      "Epoch 26/50\n",
+      "1000/1000 [==============================] - 0s 36us/step - loss: 2.0725 - acc: 0.2860\n",
+      "Epoch 27/50\n",
+      "1000/1000 [==============================] - 0s 39us/step - loss: 2.0594 - acc: 0.2860\n",
+      "Epoch 28/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 2.0487 - acc: 0.2850\n",
+      "Epoch 29/50\n",
+      "1000/1000 [==============================] - 0s 36us/step - loss: 2.0382 - acc: 0.2920\n",
+      "Epoch 30/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 2.0262 - acc: 0.2990\n",
+      "Epoch 31/50\n",
+      "1000/1000 [==============================] - 0s 38us/step - loss: 2.0150 - acc: 0.3170\n",
+      "Epoch 32/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 2.0014 - acc: 0.3050\n",
+      "Epoch 33/50\n",
+      "1000/1000 [==============================] - 0s 36us/step - loss: 1.9903 - acc: 0.3160\n",
+      "Epoch 34/50\n",
+      "1000/1000 [==============================] - 0s 39us/step - loss: 1.9800 - acc: 0.3340\n",
+      "Epoch 35/50\n",
+      "1000/1000 [==============================] - 0s 35us/step - loss: 1.9682 - acc: 0.3420\n",
+      "Epoch 36/50\n",
+      "1000/1000 [==============================] - 0s 35us/step - loss: 1.9490 - acc: 0.3580\n",
+      "Epoch 37/50\n",
+      "1000/1000 [==============================] - 0s 33us/step - loss: 1.9452 - acc: 0.3420\n",
+      "Epoch 38/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 1.9315 - acc: 0.3480\n",
+      "Epoch 39/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 1.9213 - acc: 0.3530\n",
+      "Epoch 40/50\n",
+      "1000/1000 [==============================] - 0s 35us/step - loss: 1.9075 - acc: 0.3730\n",
+      "Epoch 41/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 1.8934 - acc: 0.3770\n",
+      "Epoch 42/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 1.8868 - acc: 0.3730\n",
+      "Epoch 43/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 1.8716 - acc: 0.4000\n",
+      "Epoch 44/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 1.8645 - acc: 0.3860\n",
+      "Epoch 45/50\n",
+      "1000/1000 [==============================] - 0s 37us/step - loss: 1.8545 - acc: 0.3790\n",
+      "Epoch 46/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 1.8429 - acc: 0.3980\n",
+      "Epoch 47/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 1.8293 - acc: 0.4060\n",
+      "Epoch 48/50\n",
+      "1000/1000 [==============================] - 0s 35us/step - loss: 1.8224 - acc: 0.4000\n",
+      "Epoch 49/50\n",
+      "1000/1000 [==============================] - 0s 34us/step - loss: 1.8094 - acc: 0.4060\n",
+      "Epoch 50/50\n",
+      "1000/1000 [==============================] - 0s 36us/step - loss: 1.8008 - acc: 0.4220\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x2a0b2de1668>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For a single-input model with 10 classes (categorical classification):\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(units=32, activation='relu', input_dim=100))\n",
+    "model.add(Dense(units=10, activation='softmax'))\n",
+    "model.compile(optimizer='rmsprop',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "import keras\n",
+    "import numpy as np\n",
+    "data = np.random.random((1000, 100))\n",
+    "labels = np.random.randint(10, size=(1000, 1))\n",
+    "\n",
+    "# Convert labels to categorical onehot encoding\n",
+    "one_hot_labels = keras.utils.to_categorical(labels, num_classes=10)\n",
+    "\n",
+    "model.fit(data, one_hot_labels, epochs=20, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 案例\n",
+    "### 基于多层感知器的softmax多分类"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1000/1000 [==============================] - 1s 569us/step - loss: 2.4147 - acc: 0.1000 - mean_pred: 0.1000\n",
+      "Epoch 2/10\n",
+      "1000/1000 [==============================] - 0s 24us/step - loss: 2.3733 - acc: 0.0910 - mean_pred: 0.1000\n",
+      "Epoch 3/10\n",
+      "1000/1000 [==============================] - 0s 22us/step - loss: 2.3350 - acc: 0.1320 - mean_pred: 0.1000\n",
+      "Epoch 4/10\n",
+      "1000/1000 [==============================] - 0s 26us/step - loss: 2.3336 - acc: 0.0970 - mean_pred: 0.1000\n",
+      "Epoch 5/10\n",
+      "1000/1000 [==============================] - 0s 22us/step - loss: 2.3201 - acc: 0.1020 - mean_pred: 0.1000\n",
+      "Epoch 6/10\n",
+      "1000/1000 [==============================] - 0s 25us/step - loss: 2.3161 - acc: 0.1160 - mean_pred: 0.1000\n",
+      "Epoch 7/10\n",
+      "1000/1000 [==============================] - 0s 23us/step - loss: 2.3092 - acc: 0.1130 - mean_pred: 0.1000\n",
+      "Epoch 8/10\n",
+      "1000/1000 [==============================] - 0s 24us/step - loss: 2.3145 - acc: 0.1110 - mean_pred: 0.1000\n",
+      "Epoch 9/10\n",
+      "1000/1000 [==============================] - 0s 23us/step - loss: 2.3169 - acc: 0.1040 - mean_pred: 0.1000\n",
+      "Epoch 10/10\n",
+      "1000/1000 [==============================] - 0s 25us/step - loss: 2.3070 - acc: 0.1100 - mean_pred: 0.1000\n",
+      "<keras.callbacks.History object at 0x000002A0BA332C88>\n",
+      "100/100 [==============================] - 0s 1ms/step\n",
+      "[2.2997345924377441, 0.15999999642372131, 0.10000000149011612]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout, Activation\n",
+    "from keras.optimizers import SGD\n",
+    "\n",
+    "import numpy as np\n",
+    "import keras.backend as K\n",
+    "\n",
+    "def mean_pred(y_true, y_pred):\n",
+    "    return K.mean(y_pred)\n",
+    "\n",
+    "x_train = np.random.random((1000, 20))\n",
+    "y_train = keras.utils.to_categorical(np.random.randint(10, size=(1000, 1)), num_classes=10)\n",
+    "x_test = np.random.random((100, 20))\n",
+    "y_test = keras.utils.to_categorical(np.random.randint(10, size=(100, 1)), num_classes=10)\n",
+    "\n",
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Dense(units=64, activation='relu', input_dim=20))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(units=64, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(10, activation='softmax'))\n",
+    "\n",
+    "sgd = SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer=sgd,\n",
+    "              metrics=['accuracy', mean_pred])\n",
+    "\n",
+    "model.fit(x_train, y_train, epochs=10, batch_size=128)\n",
+    "score = model.evaluate(x_test, y_test, batch_size=128)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
